<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="text_imdb">IMDb</string>
    <string name="text_overview">Overview</string>
    <string name="text_release">Release</string>
    <string name="text_genre">Genre</string>
    <string name="text_duration">Number of Episodes</string>
    <string name="text_score">Score</string>
    <string name="text_ten_score">/10</string>
    <string name="text_summary">Summary</string>
    <string name="text_movie">Movie</string>
    <string name="text_tvshow">TV Show</string>
    <string-array name="data_movie_title">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>BumbleBee</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Glass</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_movie_desc">
        <item>Seasoned musician Jackson Maine discovers and falls in love with struggling artist Ally. She has just about given up on her dream to make it big as a singer until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>After three years, the business of Muslihat, who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira, her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem: frictions between his former subordinates.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Earl Stone, a man in his 80s, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he’s just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="data_movie_release">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2019</item>
        <item>2019</item>
        <item>2018</item>
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>
    <string-array name="data_movie_duration">
        <item>2h 16min</item>
        <item>2h 23min</item>
        <item>2h 29min</item>
        <item>2h 4min</item>
        <item>2h 15min</item>
        <item>1h 54min</item>
        <item>1h 44min</item>
        <item>2h 9min</item>
        <item>2h 8min</item>
        <item>1h 34min</item>
        <item>1h 56min</item>
        <item>1h 56min</item>
        <item>1h 52min</item>
    </string-array>
    <string-array name="data_movie_rating">
        <item>17+</item>
        <item>13+</item>
        <item>13+</item>
        <item>R</item>
        <item>17+</item>
        <item>13+</item>
        <item>SU</item>
        <item>13+</item>
        <item>13+</item>
        <item>13+</item>
        <item>17+</item>
        <item>17+</item>
        <item>13+</item>
    </string-array>
    <string-array name="data_movie_genre">
        <item>Drama, Music, Romance</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Action, Adventure, Sci-Fi</item>
        <item>Drama, Horror, Sci-Fi</item>
        <item>Biography, Drama, Music</item>
        <item>Action, Adventure, Sci-Fi</item>
        <item>Animation, Action, Adventure</item>
        <item>Drama, Sci-Fi, Thriller</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Comedy, Drama</item>
        <item>Action, Adventure, Thriller</item>
        <item>Crime, Drama, Thriller</item>
        <item>Action, Sci-Fi, Thriller</item>
    </string-array>
    <string-array name="data_movie_imdb">
        <item>7.7</item>
        <item>7.1</item>
        <item>8.5</item>
        <item>6.6</item>
        <item>8.0</item>
        <item>6.9</item>
        <item>7.6</item>
        <item>6.8</item>
        <item>6.1</item>
        <item>8.0</item>
        <item>5.3</item>
        <item>7.1</item>
        <item>6.7</item>
    </string-array>
    <string-array name="data_tvshow_title">
        <item>Krypton</item>
        <item>Station 19</item>
        <item>Goblin Slayer</item>
        <item>Legacies</item>
        <item>Titans</item>
        <item>Final Space</item>
        <item>The Rookie</item>
        <item>Killing Eve</item>
        <item>Darling in the FRANXX</item>
        <item>9–1–1</item>
    </string-array>
    <string-array name="data_tvshow_desc">
        <item>Set two generations before the destruction of the legendary Man of Steel’s home planet, Krypton follows Superman’s grandfather — whose House of El was ostracized and shamed — as he fights to redeem his family’s honor and save his beloved world from chaos.</item>
        <item>A group of heroic firefighters at Seattle Fire Station 19—from captain to newest recruit—risk their lives and hearts both in the line of duty and off the clock. These brave men and women are like family, literally and figuratively, and together they put their own lives in jeopardy as first responders to save the lives of others.</item>
        <item>A young priestess has formed her first adventuring party, but almost immediately they find themselves in distress. It\'s the Goblin Slayer who comes to their rescue—a man who\'s dedicated his life to the extermination of all goblins, by any means necessary. And when rumors of his feats begin to circulate, there\'s no telling who might come calling next.</item>
        <item>In a place where young witches, vampires, and werewolves are nurtured to be their best selves in spite of their worst impulses, Klaus Mikaelson’s daughter, 17-year-old Hope Mikaelson, Alaric Saltzman’s twins, Lizzie and Josie Saltzman, among others, come of age into heroes and villains at The Salvatore School for the Young and Gifted.</item>
        <item>A team of young superheroes led by Nightwing (formerly Batman\'s first Robin) form to combat evil and other perils.</item>
        <item>An astronaut named Gary and his planet-destroying sidekick Mooncake embark on serialized journeys through space in order to unlock the mystery of “Final Space,” the last point in the universe, if it actually does exist.</item>
        <item>Starting over isn’t easy, especially for small-town guy John Nolan who, after a life-altering incident, is pursuing his dream of being an LAPD officer. As the force’s oldest rookie, he’s met with skepticism from some higher-ups who see him as just a walking midlife crisis.</item>
        <item>A security consultant hunts for a ruthless assassin. Equally obsessed with each other, they go head to head in an epic game of cat-and-mouse.</item>
        <item>The story is set in the distant future. The land is ruined, and humanity establishes the mobile fort city Plantation. Pilots produced inside Plantation live in Mistilteinn, also know as the "birdcage." Children live there knowing nothing of the outside world or the freedom of the sky. Their lives consist of battling to carry out missions. Their enemies are mysterious giant lifeforms known as Kyouryuu, and the children pilot robots called Franxx to face off against them. For the children, riding the Franxx proves their existence.</item>
        <item>Explore the high-pressure experiences of police officers, paramedics and firefighters who are thrust into the most frightening, shocking and heart-stopping situations. These emergency responders must try to balance saving those who are at their most vulnerable with solving the problems in their own lives.</item>
    </string-array>
    <string-array name="data_tvshow_release">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>
    <string-array name="data_tvshow_duration">
        <item>45min</item>
        <item>45min</item>
        <item>24min</item>
        <item>43min</item>
        <item>43min</item>
        <item>22min</item>
        <item>43min</item>
        <item>43min</item>
        <item>24min</item>
        <item>45min</item>
    </string-array>
</resources>