<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    tools:context=".detail.movies.DetailMovieActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBarDetailTvShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_detail_photo_tvshow" />

        <ImageView
            android:id="@+id/bg_blur_tvshow"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/poster_venom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/img_detail_photo_tvshow"
            android:layout_width="180dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            tools:src="@drawable/poster_venom"
            app:layout_constraintBottom_toBottomOf="@+id/bg_blur_tvshow"
            app:layout_constraintEnd_toEndOf="@+id/bg_blur_tvshow"
            app:layout_constraintStart_toStartOf="@+id/bg_blur_tvshow"
            app:layout_constraintTop_toTopOf="@+id/bg_blur_tvshow" />

        <TextView
            android:id="@+id/textView_tvshow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/text_overview"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_photo_tvshow" />

        <View
            android:id="@+id/myRectangleView_tvshow"
            android:layout_width="48dp"
            android:layout_height="4dp"
            android:layout_marginVertical="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tvshow" />

        <TextView
            android:id="@+id/textView6_tvshow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/text_release"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myRectangleView_tvshow" />

        <TextView
            android:id="@+id/tv_detail_release_tvshow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6_tvshow"
            tools:text="2019" />

        <TextView
            android:id="@+id/textView3_tvshow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/text_duration"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_release_tvshow" />

        <TextView
            android:id="@+id/tv_detail_duration_tvshow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3_tvshow"
            tools:text="1h 52min" />

        <TextView
            android:id="@+id/textView2_tvshow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/text_score"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_duration_tvshow" />

        <ImageView
            android:id="@+id/imageView2_tvshow"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_tvshow" />

        <TextView
            android:id="@+id/tv_detail_imdb_tvshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2_tvshow"
            app:layout_constraintStart_toEndOf="@+id/imageView2_tvshow"
            app:layout_constraintTop_toTopOf="@+id/imageView2_tvshow"
            tools:text="9.9" />

        <TextView
            android:id="@+id/textView8_tvshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/text_ten_score"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_imdb_tvshow"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_imdb_tvshow"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_imdb_tvshow" />

        <ImageView
            android:id="@+id/imdb_logo_tvshow"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/imdb_logo"
            app:layout_constraintBottom_toBottomOf="@+id/textView8_tvshow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView8_tvshow"
            app:layout_constraintTop_toTopOf="@+id/textView8_tvshow" />

        <TextView
            android:id="@+id/textView9_tvshow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/text_summary"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2_tvshow" />

        <TextView
            android:id="@+id/tv_detail_desc_tvshow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingMultiplier="1.2"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9_tvshow"
            tools:text="Seasoned musician Jackson Maine discovers and falls in love with struggling artist Ally. She has just about given up on her dream to make it big as a singer until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons." />

    </android.support.constraint.ConstraintLayout>

</ScrollView>

